--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background-image: url(img/pexels-tirachard-kumtanom-112571-733852.jpg);
+  background-color: whitesmoke;
   background-size: cover;
 }
 
