--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,7 @@ h4{
 }
 .Contacts{
   color: black;
-  font-family: sans serif;
+  font-family: Arial, sans-serif;
   display: contents;
   text-align: start;
 }
